--- a/src/scss/include/_common.scss
+++ b/src/scss/include/_common.scss
@@ -68,6 +68,11 @@ img {
     border-radius: 32px;
     position: relative;
     padding-left: 45px;
+    transition: 1s;
+    &:hover {
+        background-color: $color_factory;
+        color: #fff;
+    }
     @include mq(tb) {
         font-size: 2.666vw;
         max-width: calc(100vw - 50px);
