--- a/src/scss/include/_contact.scss
+++ b/src/scss/include/_contact.scss
@@ -1,8 +1,13 @@
 div.contact {
     .inner {
         width: 100vw;
+        height: 840px;
         background-color: #eaeaea;
+        position: relative;
         .contact-area {
+            position: absolute;
+            top: 0;
+            left: 0;
             display: flex;
             width: 89vw;
             background-color: #fff;
@@ -103,6 +108,10 @@ div.contact {
             }
         }
         .contact-nav {
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, 0);
+            bottom: 0;
             margin: 0 auto;
             width: 1100px;
             padding: 60px 0 90px;
