--- a/src/scss/about_factory.scss
+++ b/src/scss/about_factory.scss
@@ -197,6 +197,16 @@ section.howto {
             line-height: 1.8;
             padding: 2em 0;
             width: 820px;
+            span {
+                display: block;
+                font-size: 12px;
+                line-height: 1;
+                text-align: right;
+                padding-top: .8em;
+                @include mq(tb) {
+                    font-size: 1.77vw;
+                }
+            }
             @include mq(tb) {
                 font-size: 2.36vw;
                 width: 100vw;
