--- a/src/scss/product_detail.scss
+++ b/src/scss/product_detail.scss
@@ -1,7 +1,8 @@
 @import "include/reset";
 @import "include/common";
 @import "include/header";
-@import "include/contact";
+@import "include/contact_part";
+@import "include/footer_nav";
 @import "include/footer";
 @import "include/breadcrumblist";
 @import "../../node_modules/slick-carousel/slick/slick.scss";
