--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -549,13 +549,13 @@ body {
                 p {
                     font-size: 16px;
                     line-height: 1.8;
-                    padding: 1em 0;
+                    padding: 1em 0 2em;
                 }
                 a {
                     width: 312px;
-                    position: absolute;
-                    left: 0;
-                    bottom: 45px;
+                    // position: absolute;
+                    // left: 0;
+                    // bottom: 45px;
                     @include mq(tb) {
                         position: relative;
                         margin: 5em auto 0;
