--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -40,6 +40,10 @@
 
 // section contact 
 section.contact {
+    padding-bottom: 80px;
+    @include mq(tb) {
+        padding-bottom: 24vw;
+    }
     h3 {
         font-size: 35px;
         font-weight: 600;
