--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -40,6 +40,10 @@
 
 // section news 
 section.news {
+    padding-bottom: 40px;
+    @include mq(tb) {
+        padding-bottom: 12vw;
+    }
     .inner {
         width: 1100px;
         margin: 50px auto 300px;
