--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -40,6 +40,10 @@
 
 // section products 
 section.products {
+    padding-bottom: 80px;
+    @include mq(tb) {
+        padding-bottom: 24vw;
+    }
     .inner {
         width: 1100px;
         margin: 0 auto;
