--- a/src/scss/recipe.scss
+++ b/src/scss/recipe.scss
@@ -25,8 +25,10 @@
 // section recipe 
 section.recipe {
     margin: 120px 0;
+    padding-bottom: 80px;
     @include mq(tb) {
         margin: 16vw 0;
+        padding-bottom: 24vw;
     }
     .inner {
         width: 1100px;
