--- a/src/scss/voice.scss
+++ b/src/scss/voice.scss
@@ -35,9 +35,9 @@
 
 // section voice 
 section.voice {
-    margin-bottom: 200px;
+    padding-bottom: 80px;
     @include mq(tb) {
-        margin-bottom: 24vw;
+        padding-bottom: 24vw;
     }
     .inner {
         width: 1100px;
